# tictactoe

./: .gitignore  Cargo.toml
src/: heuristic_counter.rs  lib.rs  main.rs
www/: index.html  index.js  package-lock.json  package.json
