[package]
name = "tictactoe"
version = "0.1.2"
authors = ["hgking <hgmaxwellking@gmail.com>"]
edition = "2018"
repository = "https://github.com/HGHimself/tictactoe"
description = "a typical tic tac toe game, but with the ability to play against a robot"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
regex = "1.4.1"
lazy_static = "1.4.0"
rand = "0.7.3"
wasm-bindgen = "0.2.68"
